--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 		"tecnickcom/tcpdf": "*",
 		"mpdf/mpdf": "@dev",
 		"richardfan1126/yii2-js-register": "*",
-		"yiisoft/yii2-bootstrap4": "^2.0"
+		"rmrevin/yii2-fontawesome": "2.10.*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
