--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,22 @@ Thumbs.db
 # composer vendor dir
 /vendor
 
+# composer itself is not needed
+composer.phar
+
+# Mac DS_Store Files
+.DS_Store
+
+# phpunit itself is not needed
+phpunit.phar
+# local phpunit config
+/phpunit.xml
+
+# vagrant runtime
+/.vagrant
+
+# ignore generated files
+/frontend/web/
+/frontend/config/
+/backend/web/
+/backend/config/
