--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 /yii_test
 /yii_test.bat
 
+# composer itself is not needed
+/composer.phar
+/composer.lock
+/composer.json
+composer.phar
+composer.lock
+composer.json
 # phpstorm project files
 .idea
 
