--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
 		"tecnickcom/tcpdf": "*",
 		"mpdf/mpdf": "@dev",
 		"richardfan1126/yii2-js-register": "*",
-		"rmrevin/yii2-fontawesome": "2.10.*"
+		"rmrevin/yii2-fontawesome": "2.10.*",
+        "kartik-v/yii2-bootstrap4-dropdown": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
