--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
 		"mpdf/mpdf": "@dev",
 		"richardfan1126/yii2-js-register": "*",
 		"rmrevin/yii2-fontawesome": "2.10.*",
+        "mdmsoft/yii2-admin": "~2.0",
         "kartik-v/yii2-bootstrap4-dropdown": "@dev"
     },
     "require-dev": {
