--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
 		"yiisoft/yii2-jui": "^2.0",
 		"tecnickcom/tcpdf": "*",
 		"mpdf/mpdf": "@dev",
+        "setasign/fpdf": "1.8.*",
+        "setasign/fpdi": "^2.0",
 		"richardfan1126/yii2-js-register": "*",
 		"rmrevin/yii2-fontawesome": "2.10.*",
         "mdmsoft/yii2-admin": "~2.0",
